# myGTK

./: .gitignore  LICENSE  README.md  create_gtk_app.sh  readme.txt
GTK/: a.out  compile.txt  ejemplo.c
example5/: README.md  exampleapp.c  exampleapp.gresource.xml  exampleapp.h  gears-menu.ui  main.c  meson.build  window.ui
gtk4-app/: main.c  meson.build  run_app.sh
gtk4-app2/: main.c  meson.build  run_app.sh
gtk4-packing/: meson.build  run_app.sh
gtk4-pigpio/: run_app.sh
gtk4_getting_started/: main.c  meson.build
gtk4_getting_started/gtk-examples/: builder.ui  example-4.c  exampleapp.h  exampleappwin.h
gtk_app_template/: README.md  main.c  meson.build
gtk_drawing/: README.md  main.c
install/: gobject-introspection-1.68.0.tar.xz  pango-1.47.0.tar.xz  pango-1.48.4.tar.xz
keyboard_app/: builder.ui.xml  main.c
mygtkKeyboard/: builder.ui  buttoncallbacks.c  buttoncallbacks.h  exampleapp.c  exampleappwin.c  main.c  meson.build  window.ui
trivialApp/: exampleapp.gresource.xml  meson.build
